scrollbar issue fixed

--- a/src/app.css
+++ b/src/app.css
@@ -9,4 +9,8 @@ body{
 }
 .main{
     flex:5;
+    overflow:hidden;
+}
+::-webkit-scrollbar {
+    display: none;
 }
